# mongoproxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-init  Dockerfile.cargo-chef  Dockerfile.debug  Dockerfile.debug-image  LICENSE  README.md  README.txt  iptables-init.sh  run-profiler.sh
.github/workflows/: build-images.yml  docker.yml  release.yaml  rust.yml
async-bson/: .gitignore  Cargo.toml
async-bson/src/: lib.rs
benches/: tracker_benchmark.rs
envoy-wasm/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
envoy-wasm/src/: codec.rs  lib.rs
envoy-wasm/testing/: docker-compose.yaml
examples/: README.md
examples/front-proxy/: deployment.yaml  service.yaml
examples/k8s-sidecar-injector/: configmap.yaml  deployment.yaml
examples/servicemonitor/: service.yaml  servicemonitor.yaml
examples/sidecar/: deployment.yaml
mongo-protocol/: Cargo.toml
mongo-protocol/src/: lib.rs
mongodb/: Cargo.toml
mongodb/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: appconfig.rs  dstaddr.rs  jaeger_tracing.rs  lib.rs  main.rs  trace_propagation.rs  tracker.rs
src/: .main.rs.swp  appconfig.rs  bson_lite.rs  dstaddr.rs  jaeger_tracing.rs  lib.rs  main.rs  metrics.rs  mongodb.rs  tracing.rs  tracker.rs
src/mongodb/: messages.rs  mod.rs  parser.rs  tracker.rs
testing/: docker-compose.yaml  mongo_benchmark.py  mongo_connect_loop.py  mongo_find_some.py  mongo_ins_del_loop.py  mongo_insert_some.py  otlp_tracing_client.py  prometheus.yml  python_tracing_client.py  tracing_client.py
testing/go-legacy-driver/: go.mod  go.sum  main.go
testing/go-mongo-driver/: go.mod  go.sum  main.go
tests/: docker-compose.yaml  pip-requirement.txt  prometheus.yml  run-mongodb-queries.py  run-tests.sh
