[package]
name = "mongoproxy"
version = "0.2.9"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[profile.release]
debug = true

[[bench]]
name = "tracker_benchmark"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
byteorder = '1.3'
log = '0.4'
env_logger = '0.6'
mio = '0.6'
rouille = '3.0'
prometheus = '0.7'
lazy_static = '1.4'
clap = '2.33'
crossbeam-channel = '0.3'
rustracing = '0.2'
rustracing_jaeger = '0.2'
libc = '0.2'
bson = '0.13'

[features]
log_mongodb_messages = []
