[package]
name = "mongoproxy"
version = "0.5.0"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
byteorder = '1.3'
rouille = '3.0'
prometheus = '0.7'
lazy_static = '1.4'
clap = '2.33'
crossbeam-channel = '0.3'
rustracing = '0.2'
rustracing_jaeger = '0.2'
libc = '0.2'
bson = '1.1'
tokio = { version = "0.2.22", features = ["rt-threaded", "net", "tcp", "macros", "io-util", "sync", "stream" ] }
async-bson = { git = "https://github.com/mpihlak/async-bson" }
bytes = '0.5'
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
isatty = "0.1.5"
