[workspace]

members = [
    "proxy",
    "mongo-protocol",
    "async-bson",
]

# WASM library depends on sync version of async-bson and mongo-protocol. This
# conflicts with the proxy, so exclude it from the workspace to avoid build
# errors.
exclude = [ "envoy-wasm" ]

[profile.release]
debug = false
