[package]
name = "envoy-wasm"
version = "0.1.0"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.1.2"
log = "0.4"
bson = "1.1"
mongodb = { path="../mongodb", features = ["is_sync"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"
