[package]
name = "envoy-wasm"
version = "0.1.0"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
bson = "1.1"
tracing = "0.1"
proxy-wasm = { git = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk" }
mongo-protocol = { path="../mongo-protocol", features = ["is_sync"] }

[dev-dependencies]
tracing-subscriber = "0.2"
