[package]
name = "mongo-protocol"
version = "0.1.0"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[features]
default = [ "tokio/io-util", "tokio/macros" ]
is_sync = [ "maybe-async/is_sync", "async-bson/is_sync" ]

[dependencies]
tracing = "0.1"
prometheus = "0.7"
lazy_static = "1.4"
bson = "1.1"
byteorder = "1.3"
tokio = { version = "1.34", features = ["macros", "io-util"], optional = true }
async-bson = { path = "../async-bson" }
maybe-async = { version = "0.2" }
bytes = "1.7.1"
tracing-test = "0.2.5"
