[package]
name = "mongodb"
version = "0.1.0"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[features]
default = [ "tokio/io-util", "tokio/macros" ]
is_sync = [ "maybe-async/is_sync", "async-bson/is_sync" ]

[dependencies]
tracing = "0.1"
prometheus = "0.7"
lazy_static = "1.4"
bson = "1.1"
byteorder = "1.3"
tokio = { version = "0.2.22", features = ["macros", "io-util"], optional = true }
async-bson = { git = "https://github.com/mpihlak/async-bson", tag = "v0.2.2" }
#async-bson = { path = "/Users/mpihlak/src/random-stuff/async-bson" }
maybe-async = { version = "0.2" }
