[package]
name = "mongoproxy"
version = "0.5.5"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[dependencies]
byteorder = '1.3'
hyper = '0.13'
prometheus = '0.7'
lazy_static = '1.4'
clap = '2.33'
libc = '0.2'
bson = '1.1'
tokio = { version = "0.2.22", features = ["rt-threaded", "net", "tcp", "macros", "io-util", "sync", "stream" ] }
bytes = '0.5'
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-appender = "0.1"
isatty = "0.1.5"
opentelemetry = { version="0.9.1", features = ["tokio"] }
opentelemetry-jaeger = { version="0.8.0", features = ["tokio"] }
mongo-protocol = { path="../mongo-protocol" }
async-bson = { git = "https://github.com/mpihlak/async-bson", tag = "v0.2.3" }
