[package]
name = "mongoproxy"
version = "0.5.20"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[dependencies]
byteorder = '1.3'
hyper = { version = "0.14", features = ["full"] }
prometheus = '0.7'
lazy_static = '1.4'
clap = '2.33'
libc = '0.2'
bson = '1.1'
tokio = { version = "1.0", features = ["rt", "net", "macros", "io-util", "sync" ] }
tokio-util = { version = '0.6', features = ["io"] }
tokio-stream = '0.1'
bytes = '1.0'
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-appender = "0.1"
isatty = "0.1.5"
opentelemetry = { version="0.12", features = ["tokio-support"] }
opentelemetry-jaeger = { version="0.11", features = ["tokio"] }
mongo-protocol = { path="../mongo-protocol" }
async-bson = { path="../async-bson" }
