[package]
name = "mongoproxy"
version = "0.5.34"
authors = ["mpihlak <martin.pihlak@starship.co>"]
edition = "2018"

[dependencies]
byteorder = '1.3'
hyper = { version = "0.14", features = ["full"] }
lazy_static = '1.4'
clap = '2.33'
libc = '0.2'
bson = '1.1'
tokio = { version = "1.34", features = ["rt-multi-thread", "net", "macros", "io-util", "sync" ] }
tokio-util = { version = '0.6', features = ["io"] }
tokio-stream = '0.1'
bytes = '1.0'
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-appender = "0.1"
isatty = "0.1.5"
mongo-protocol = { path="../mongo-protocol" }
async-bson = { path="../async-bson" }
regex = { version = "1.8.1", features = ["unicode-case"] }
tracing-test = "0.2.5"

opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
opentelemetry-jaeger-propagator = "0.3.0"
opentelemetry-otlp = "0.17.0"

prometheus = "0.13.4"
